Archive2/ce/8bb4d79ad5d776/output
main.cpp: In function 'int main()':
main.cpp:9:5: error: a function-definition is not allowed here before '{' token
     {
     ^
main.cpp:27:1: error: expected '}' at end of input
 }
 ^
